@@ -1,3 +1,4 @@
+1/2/13 more refinement of level=1 challenge generation
 1/2/13 fixes and additional constraints for level=1 challenges
 1/2/13 first pass at challenge generation for level=1
 1/2/13 use list instead of array for challenges
